didnt't read part of the code review fixed z-index's and padding

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -19,6 +19,7 @@
   justify-content: space-between;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .about__title {
@@ -27,7 +28,6 @@
   font-size: 44px;
   line-height: 52px;
   margin: 0;
-  z-index: 1;
 }
 
 .about__content {
@@ -54,6 +54,7 @@
   height: 426px;
   border-radius: 50%;
   background-color: #1878dc;
+  z-index: -1;
 }
 
 .about__circle_animation_blurred {
