--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,6 +9,7 @@
   position: relative;
   height: 800px;
   padding: 30px 80px 40px;
+  z-index: 1;
 }
 
 .header__title {
@@ -33,6 +34,7 @@
   position: absolute;
   top: 124px;
   right: 5px;
+  z-index: -1;
 }
 
 .header__description {
