--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 100px 0 215px 80px;
+  padding: 100px 0 215px;
   color: #ffffff;
 }
 
@@ -14,6 +14,7 @@
   font-size: 44px;
   line-height: 52px;
   margin: 0;
+  padding-left: 80px;
 }
 
 .recipes__subtitle {
@@ -22,6 +23,7 @@
   margin: 24px 0 0;
   font-size: 20px;
   line-height: 30px;
+  padding-left: 80px;
 }
 
 .recipes__videos {
@@ -29,8 +31,8 @@
   list-style-type: none;
   gap: 40px;
   justify-content: center;
-  padding: 80px 0 0;
-  margin: 0;
+  margin: 80px 0 0;
+  padding: 0;
 }
 
 .recipes__video-caption {
